--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Go4Lunch</string>
-    <string name="menu_map">Map View</string>
-    <string name="menu_list">List View</string>
-    <string name="menu_workmates">Workmates</string>
+    <string name="menu_map">Vue Carte</string>
+    <string name="menu_list">Vue Liste</string>
+    <string name="menu_workmates">Collègues</string>
+    <string name="toolbar_menu">Menu</string>
+    <string name="toolbar_search">Rechercher</string>
+
 </resources>
