--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,5 +6,7 @@
     <string name="menu_workmates">Workmates</string>
     <string name="toolbar_menu">Menu</string>
     <string name="toolbar_search">Search</string>
+    <string name="login_facebook">Sign in with Facebook</string>
+    <string name="login_google">Sign in with Google</string>
 
 </resources>
