--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -8,5 +8,5 @@
     <string name="toolbar_search">Search</string>
     <string name="login_facebook">Sign in with Facebook</string>
     <string name="login_google">Sign in with Google</string>
-
+    <string name="login_twitter">Sign in with Twitter</string>
 </resources>
