--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="toolbar_search">Rechercher</string>
     <string name="login_facebook">Connexion avec Facebook</string>
     <string name="login_google">Connexion avec Google</string>
+    <string name="login_twitter">Connexion avec Twitter</string>
+
 
 </resources>
