--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -15,5 +15,7 @@
     <string name="side_menu_login">Log in</string>
     <string name="side_menu_logout">Log out</string>
 
+    <string name="workmate_text">%1$s is eating %2$s (%3$s)</string>
+
 
 </resources>
