--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
 
     <string name="workmate_text">%1$s mange au %2$s (%3$s)</string>
+    <string name="side_menu_home">Home</string>
 
 
 </resources>
