--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -18,5 +18,7 @@
     <string name="workmate_text">%1$s is eating at %2$s (%3$s)</string>
     <string name="side_menu_home">Home</string>
 
+    <string name="location_button">center view</string>
+
 
 </resources>
