--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,10 @@
     <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
 
     <string name="workmate_text">%1$s mange au %2$s (%3$s)</string>
-    <string name="side_menu_home">Home</string>
+    <string name="side_menu_home">Accueil</string>
+    <string name="drawer_header_name" translatable="false">%1$s</string>
+    <string name="drawer_header_email" translatable="false">%1$s</string>
+    <string name="location_button">centrer vue</string>
 
 
 </resources>
