--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Go4Lunch</string>
-    <string name="menu_map">Map View</string>
-    <string name="menu_list">List View</string>
-    <string name="menu_workmates">Workmates</string>
-    <string name="toolbar_menu">Menu</string>
-    <string name="toolbar_search">Search</string>
+
+    <!--LOGIN-->
     <string name="login_facebook">Sign in with Facebook</string>
     <string name="login_google">Sign in with Google</string>
     <string name="login_twitter">Sign in with Twitter</string>
 
-    <string name="side_menu_lunch">My lunch</string>
-    <string name="side_menu_settings">Settings</string>
-    <string name="side_menu_login">Log in</string>
-    <string name="side_menu_logout">Log out</string>
+    <!--DASHBOARD-->
+    <string name="app_name">Go4Lunch</string>
+    <string name="menu_map">Map View</string>
+    <string name="menu_list">List View</string>
+    <string name="menu_workmates">Workmates</string>
+    <string name="toolbar_search">Search</string>
+    <string name="location_button">Center view</string>.
 
+    <!--DRAWER-->
+    <string name="drawer_home">HOME</string>
+    <string name="drawer_lunch">MY LUNCH</string>
+    <string name="drawer_settings">SETTINGS</string>
+    <string name="drawer_login">LOG IN</string>
+    <string name="drawer_logout">LOG OUT</string>
+
+    <!--WORKMATES-->
     <string name="workmate_text">%1$s is eating at %2$s (%3$s)</string>
-    <string name="side_menu_home">Home</string>
 
-    <string name="location_button">center view</string>
+    <!--LIST VIEW -->
+    <string name="item_restaurant_hours">Open until %1$s</string>
 
 
 </resources>
