--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -23,6 +23,8 @@
 
     <!--WORKMATES-->
     <string name="workmate_text">%1$s is eating at %2$s (%3$s)</string>
+    <string name="workmate_text_no_lunch">%1$s did not choose yet </string>
+
 
     <!--LIST VIEW -->
     <string name="item_restaurant_hours">Open until %1$s</string>
