--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="drawer_header_email" translatable="false">%1$s</string>
 
     <!--WORKMATES-->
-    <string name="workmate_text">%1$s mange au %2$s (%3$s)</string>
+    <string name="workmate_text">%1$s mange %2$s (%3$s)</string>
     <string name="workmate_text_no_lunch">%1$s n\'a pas encore choisi </string>
 
 
