--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <!--LIST VIEW -->
     <string name="item_restaurant_address" translatable="false">%1$s</string>
     <string name="item_restaurant_name" translatable="false">%1$s</string>
-    <string name="item_restaurant_distance" translatable="false">%1$f</string>
+    <string name="item_restaurant_distance" translatable="false">%,.2f m</string>
     <string name="item_restaurant_attendees" translatable="false">( %1$s )</string>
     <string name="item_restaurant_hours">Ouvert jusqu\'à %1$s</string>
 
