- Use restaurantList for restaurantListFragment

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -28,6 +28,7 @@
 
     <!--LIST VIEW -->
     <string name="item_restaurant_hours">Open until %1$s</string>
+    <string name="item_restaurant_no_info">Not specified</string>
 
 
 </resources>
