--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="item_restaurant_distance" translatable="false">%,.2f m</string>
     <string name="item_restaurant_attendees" translatable="false">( %1$s )</string>
     <string name="item_restaurant_hours">Ouvert jusqu\'à %1$s</string>
+    <string name="item_restaurant_no_info">Non renseigné</string>
+
 
     <!--API INFOS -->
     <string name="query_radius" translatable="false">2000</string>
