--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,10 +28,13 @@
     <string name="drawer_header_name" translatable="false">%1$s</string>
     <string name="drawer_header_email" translatable="false">%1$s</string>
 
+    <!--DETAILS-->
+    <string name="list_workmates_empty">Personne ne mange ici</string>
+
     <!--WORKMATES-->
     <string name="workmate_text">%1$s mange %2$s (%3$s)</string>
+    <string name="workmate_text_details">%1$s mange ici !</string>
     <string name="workmate_text_no_lunch">%1$s n\'a pas encore choisi </string>
-
 
     <!--LIST VIEW -->
     <string name="item_restaurant_address" translatable="false">%1$s</string>
