--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,12 +36,14 @@
     <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
     <string name="drawer_header_name" translatable="false">%1$s</string>
     <string name="drawer_header_email" translatable="false">%1$s</string>
+    <string name="drawer_no_lunch">Tu n\'as pas encore choisi de restaurant !</string>
+
 
     <!--DETAILS-->
     <string name="list_workmates_empty">Personne ne mange ici</string>
 
     <!--WORKMATES-->
-    <string name="workmate_text">%1$s mange %2$s (%3$s)</string>
+    <string name="workmate_text">%1$s mange %2$s</string>
     <string name="workmate_text_details">%1$s mange ici !</string>
     <string name="workmate_text_no_lunch">%1$s n\'a pas encore choisi </string>
 
