- Add details and workmateList for map, list and details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="item_restaurant_address" translatable="false">%1$s</string>
     <string name="item_restaurant_name" translatable="false">%1$s</string>
     <string name="item_restaurant_distance" translatable="false">%,.2f m</string>
-    <string name="item_restaurant_attendees" translatable="false">( %1$s )</string>
+    <string name="item_restaurant_attendees" translatable="false">( %1$d )</string>
     <string name="item_restaurant_hours">Ouvert jusqu\'à %1$s</string>
     <string name="item_restaurant_no_info">Non renseigné</string>
 
