--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -37,6 +37,8 @@
 
     <!--MAP-->
     <string name="map_here">YOU ARE HERE</string>
+    <string name="map_response_error">An error has been encountered while requesting restaurants( Verify your internet connection )</string>
+    <string name="map_data_format_error">An error has been encountered while parsing restaurants </string>
 
     <!--DETAILS-->
     <string name="list_workmates_empty">No one is eating here</string>
