--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,5 +79,10 @@
     <!--CONTENT DESCRIPTION -->
     <string name="cutlery_image">image de couverts</string>
 
+    <!--NOTIFICATION -->
+    <string name="notification_channel_id" translatable="false">myCanal</string>
+    <string name="notification_channel_title" translatable="false">myTitle</string>
+    <string name="notification_channel_desc" translatable="false">This is a test channel</string>
+
 
 </resources>
