--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -40,9 +40,11 @@
     <string name="drawer_no_lunch">You haven\'t chosen a restaurant yet</string>
 
     <!--MAP-->
-    <string name="map_here">YOU ARE HERE</string>
+    <string name="map_here">YOU</string>
     <string name="map_response_error">An error has been encountered while requesting restaurants ( verify your internet connection ).</string>
     <string name="map_data_format_error">An error has been encountered while reading restaurants </string>
+    <string name="map_no_restaurant">This is not a restaurant</string>
+
 
     <!--DETAILS-->
     <string name="list_workmates_empty">No one is eating here</string>
