- Fix searchView with focus for Map, prepare Notifications

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -68,8 +68,7 @@
     <string name="cutlery_image">cutlery image</string>
 
     <!--NOTIFICATION -->
-    <string name="notification_title">Reminder</string>
-
+    <string name="notification_title">Grub\'s up !</string>
     <string name="notification_content">Direction %1$s à %2$s avec %3$s</string>
     <string name="notification_content_no_workmates">Direction %1$s à %2$s</string>
 
