--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -43,6 +43,7 @@
     <string name="map_here">YOU</string>
     <string name="map_response_error">An error has been encountered while requesting restaurants ( verify your internet connection ).</string>
     <string name="map_data_format_error">An error has been encountered while reading restaurants </string>
+    <string name="map_not_found">No result !</string>
     <string name="map_no_restaurant">This is not a restaurant</string>
 
 
