--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -70,8 +70,8 @@
 
     <!--NOTIFICATION -->
     <string name="notification_title">Grub\'s up !</string>
-    <string name="notification_content">Direction %1$s à %2$s avec %3$s</string>
-    <string name="notification_content_no_workmates">Direction %1$s à %2$s</string>
+    <string name="notification_content">Go to %1$s at %2$s with %3$s</string>
+    <string name="notification_content_no_workmates">Go to %1$s at %2$s</string>
 
 
 </resources>
