--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,7 @@
     <string name="notification_channel_desc" translatable="false">This is a test channel</string>
     <string name="notification_title">À table !</string>
     <string name="notification_content">Direction %1$s à %2$s avec %3$s</string>
+    <string name="notification_content_no_restaurant">Renseignez-vous sur les restaurants à proximité !</string>
     <string name="notification_content_no_workmates">Direction %1$s à %2$s</string>
 
 
