--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -41,6 +41,7 @@
 
     <!--MAP-->
     <string name="map_here">YOU</string>
+    <string name="map_no_permission">Access to your location is required to use the application</string>
     <string name="map_response_error">An error has been encountered while requesting restaurants ( verify your internet connection ).</string>
     <string name="map_data_format_error">An error has been encountered while reading restaurants </string>
     <string name="map_not_found">No result !</string>
