--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,8 @@
     <string name="toolbar_search">Rechercher</string>
     <string name="location_button">Centrer vue</string>
     <string name="toolbar_query_too_short">Veuillez entrer au moins 3 caractères pour lancer la recherche</string>
+    <string name="searchview_hint">Chercher un restaurant…</string>
+
 
     <!--FACEBOOK LOGIN-->
     <string name="facebook_app_id" translatable="false">950434559094038</string>
